<resources>
    <string name="app_name">Parking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настроить сервис</string>
    <string name="action_change_time">Время запуска</string>
    <string name="action_tutorial">Помощь</string>
    <string name="start_service">Запустить сервис</string>
    <string name="action_button">Парканика</string>
    <string name="accessibility_service_label">Сервис парковки</string>
    <string name="accessibility_service_description">Сервису необходим доступ к экрану телефона. что бы отложенно включить приложение парковки и установить необходимые параметры.</string>
    <string name="accessibilityservice_id">com.v4n0v.memgan.parking/.service.ParkingService</string>
    <!--<string name="accessibilityservice_id">com.example.v4n0v.parking/com.v4n0v.memgan.parking.service.ParkingServicece</string>-->
    <string name="service_unavailable">Сервис недоступен</string>
    <string name="service_Ok">Сервис работает</string>
    <string name="service_start">Запустить сервис</string>
    <string name="service_stop">Остановить сервис</string>
    <string name="service_title">Сервис:</string>
    <string name="warning">Внимание!</string>
    <string name="no_app_message">Приложение Московская порковка не установлено.\nНажмите Ок, чтобы перейти в на его страницу в Google Play</string>
    <string name="icon">Icon</string>
    <string name="input_parking_place">Введите номер парковки</string>
    <string name="hours">ч</string>
    <string name="minutes">мин</string>
    <string name="empty_perking">введите номер парковки</string>
    <string name="empty_time">введите время парковки</string>
    <string name="button_done">Готово</string>
    <string name="button_cancel">Отмена</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="noServMessageStart">Приложением новозможно пользоваться, пока не будет запущен сервис "%s"\nВам необходимо предоставить права на получение информации с экрана вашего Android устройства, для того, что бы %s имело возможность управлять приложением Московская парковка</string>
    <string name="noServMessageWeb">
        <![CDATA[
<html>
<head></head>
<body style="text-align:justify;color:#757575;background-color:#fafafc;">
Приложением новозможно пользоваться, пока не будет запущен сервис "%s"\nВам необходимо предоставить права на получение информации с экрана вашего Android устройства, для того, что бы %s имело возможность управлять приложением Московская парковка
</body>
</html>
]]>
 </string>
    <string name="turnOn">Отключено</string>
    <string name="attention">Внимание</string>
    <string name="timer_header">Парковка через</string>
    <string name="fill_form">Заполните форму</string>
    <string name="parkMe">Припарковать</string>
    <string name="i_understand">Ясно, понятно</string>
    <string name="important_info">Важная информация:</string>
</resources>
